fix video on IOS

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -312,10 +312,19 @@ body {
     height: 774px;
     width: 100%;
     padding: 12px 30px 31px;
+
+    video {
+      position: absolute;
+      padding: 12px 30px 31px;
+      width: 100%;
+      z-index: 10;
+      height: 100%;
+      top: 0;
+      left: 0;
+  }
   }
 
   &-padding-top {
     padding-top: 23.4%;
   }
 }
-
